docs/0.26.0/zh/editor-quality-roadmap.md
---
title: 编辑器质量路线图
description: A3S Office 从核心编辑能力到可验证文件一致性的产品优先级与验收方式。
---

# 编辑器质量路线图

A3S Office 仍处于 1.0 之前。当前优先级不是继续增加零散菜单，而是把核心编辑、文件
往返和渲染一致性做深，并为每项能力建立可重复的测试证据。

## 第一优先级：文档视觉一致性

Document 的目标是同一份 DOCX 在字体可用、页面设置相同的前提下，与 传统 Office / Word
保持可解释、可测量的页面一致性。重点包括：

1. 字体解析、主题字体、替代字体与中西文混排。
2. 字号、字距、行高、段前段后、缩进和制表位。
3. 纸张、边距、分节、分页规则、孤行控制与自动分页。
4. 页眉页脚、页码、首页与奇偶页差异。
5. 表格宽度、行高、合并单元格、跨页续排与重复标题行。
6. 图片和浮动对象的环绕、锚点、偏移、层级与裁剪。
7. 编辑、只读预览和 PDF 导出复用同一排版结果。

验收必须使用真实 OOXML 样本、固定字体清单、固定视口和逐页截图。简单 HTML 内容或
单张页面截图不能证明整体兼容性。

当前 传统 Office 参考门已经从 Arial 与表格几何扩展到三组文字矩阵：30 行常用字体矩阵覆盖
Arial、Times New Roman、Calibri、Segoe UI 和 Microsoft YaHei 的两种字号与两种自动
行距倍数；36 行 CJK 矩阵覆盖 Microsoft YaHei、SimSun、SimHei、FangSong、KaiTi 和
DengXian 的拉丁文本与中文文本；18 行文档网格矩阵覆盖三种字体、两种字号和明确的行网格。
浏览器使用实测 传统 Office 字体行进高度，但不会改写原始 OOXML 行距倍数。DOCX 导入和导出还会
保留每个分节的 `docGrid` 类型与行间距，以及每个文字运行的 `snapToGrid` 覆盖。确定性
浏览器流程要求单页、精确语义标记、零控制台消息和零页面错误；传统 Office 对比会拒绝超过 3 像素
的文字带顶部漂移或超过 4 像素的相邻文字带行进漂移。当前常用字体、CJK 字体和文档网格
矩阵的最大“顶部 / 行进”漂移分别为 3/1、2/2 和 1/1 像素。

手机端段落间距和段落分页面板现已限制在视口内，并扩展到最大 320 px；数字输入、步进
按钮、复选项和重置操作均提供 44 px 触控区域。确定性手机流程会验证段前间距和“段落
不跨页”语义已经写入文档，同时检查关闭后精确恢复触发按钮焦点、可访问结构、控制台
和页面错误。

手机端开始功能区发生溢出时，左右翻页按钮现在固定占据两侧安全区，翻页后不会因按钮
出现或消失而改变工具栏宽度。项目符号和编号库限制在视口内，清除、重新编号、起始值
输入、步进和提交操作均提供 44 px 触控区域。列表命令关闭弹层后通过 TipTap 恢复逻辑
选区与正文焦点，避免“正文看似聚焦、再次打开却丢失当前列表设置”。确定性手机流程已
覆盖两段功能区翻页、方块项目符号、大写罗马编号、自定义起始值、命令后焦点恢复和
Escape 返回编号库触发按钮。

表格几何已经把排版算法、自动 / 百分比 / 像素首选宽度、左中右对齐、缩进、表级四边
单元格边距和单元格级边距覆盖拆成独立属性。`tblLayout`、`tblW`、`jc`、`tblInd`、
`tblCellMar`、`tcMar`、`tblGrid` 与 `tcW` 分别往返，不再把网格列宽误当作整表首选
宽度，也不会在新增或删除表格时把带网格宽度的导入自适应表格误改为固定布局。真实 DOCX
样本和 A3S Test 已验证居中的 62.5% 表格、首个单元格边距覆盖以及编辑 / 预览几何一致。
表格布局功能区的“表格属性”弹窗现在包含表格、行、列和单元格四个页签。它把自动、
百分比或厘米首选宽度、左中右位置和左缩进，与当前行高及规则、跨页断行、重复标题行、
当前列宽、单元格垂直对齐和四边边距统一到一个完整草稿中。确定后只产生一次 TipTap 事务和
一条撤销记录；取消和 Escape 不修改文档，并把焦点还给原触发按钮。用户没有修改的导入尺寸和
部分边距继承会保留原始像素值，不再因弹窗中两位小数的厘米回显发生量化漂移。390 像素宽的
确定性 A3S Test 已覆盖四个页签和触控尺寸、一次改为 72% 左对齐并缩进 0.5 厘米、1.2 厘米
固定行高、禁止跨页断行和重复标题、4 厘米列宽、单元格垂直居中和 0.4 厘米左边距，同时验证
未修改的 8 像素上边距和 16 像素右边距、取消安全、预览一致性以及零控制台和页面错误。
自适应表格的列宽字段仍显示实际渲染宽度，非标准首选宽度显示为“当前宽度”。

Word 图片操作现在通过一个“图片属性”弹窗统一管理厘米宽高、每张图片独立的纵横比锁定、
嵌入 / 四周 / 上下环绕、左中右位置、文字距离和替代文字。完整草稿只提交一次 TipTap
事务和一条独立撤销记录；没有改动的导入像素尺寸不会经过厘米回显重新量化。确定、取消和
Escape 都会保留图片选区，并把焦点还给原功能区按钮。390 像素宽的确定性 A3S Test
同时验证尺寸与比例、环绕和位置、替代文字、触控尺寸、取消安全以及零控制台和页面错误。

表格设计功能区现在把边框颜色和线型作为可复用的“边框笔”，选择颜色或线型不会直接
覆盖所有单元格。用户可以明确应用所有、外侧、内部、上、下、左、右、内部横向或内部
纵向框线，也可以一次清除选区边框。每个单元格的上、右、下、左边框分别进入 TipTap
属性，编辑与预览复用同一份数据；DOCX 导入会把表级外侧和内部边框解析到对应单元格边，
导出后重新打开不会再把混合边框压成统一样式。表格和单元格直接声明的主题色现在会通过
DOCX 主题解析，`themeTint`、`themeShade`、`themeFillTint` 和 `themeFillShade`
都会转换为确定的 RGB；编辑、预览与重新导出保持相同颜色，不再错误使用 OOXML 中的
旧备用色。DOCX 表格样式现在会从默认或显式样式出发，以有深度限制且可处理循环的
`basedOn` 链解析基础样式；`tblLook` 标志或位掩码、横纵带状尺寸、跨列和行网格偏移
共同决定整表、横纵带状、首末行列和四角单元格条件。条件样式中的填充、逐边边框、字体、
文字颜色、粗体、斜体、下划线和删除线会按 Word 优先级进入同一份编辑与预览模型；段落
对齐、方向、缩进、间距与行距规则、分页规则和制表位也复用同一优先级链，表格、单元格、
段落和文字的直接格式仍可覆盖它们。主题派生颜色在导出时物化为稳定 RGB。真实 DOCX
样本的 A3S Test 流程已验证首行、正文带状行、末行及其条件段落排版在编辑和预览中的
效果，以及零控制台和页面错误。支持范围之外的少见条件段落属性、导出后保留语义主题
引用、嵌套表格和复杂合并单元格流仍属于待完善的文件保真范围。

高度超过一整页正文区域、且允许跨页的表格行，现在会按测量得到的段落边界继续分页，不再
作为一个不可拆分的大块溢出页面；续页会复用同一排版路径重复标题行。真实 DOCX 样本使用
一个包含 120 个段落的正文行，稳定生成 3 个物理页面。A3S Test 确定性流程已经验证第 2、
第 3 页的单元格分页断点与重复标题行、键盘访问第 120 条和表格后正文，以及零控制台和页面
错误。合并单元格、嵌套表格等更复杂的跨页组合仍属于后续文件保真范围。

当前 Word 导航窗格已经从文字摘要升级为实时物理页面栅格缩略图，并与 PDF 导出共享
页面裁剪边界。当前页和相邻页优先生成，其余页面按可视窗口进入串行队列；内容变化会
防抖刷新，离屏图片会释放。捕获不依赖整份字体集合或后台标签页可能暂停的动画帧。
页面按钮也已采用带物理滚动占位的有界窗口，并在窗口外稀疏保留当前页和键盘游标页。
真实 120 页 DOCX 的确定性流程已经覆盖挂载上限、Home/End 首尾跳转、选择和焦点保持；
标题树与搜索结果现已复用同一窗口模型，超过 48 条后最多挂载 32 个连续条目，并在窗口
外稀疏保留当前项、选中项和键盘游标项。该真实样本同时提供 120 个标题和 120 个正文
匹配，确定性流程已覆盖首尾键盘访问、第 120 条精确选择、物理占位几何，以及零控制台
和页面错误。修订审阅超过 48 条后也复用该有界窗口，最多挂载 32 个连续条目，并用物理
占位保持完整滚动距离。方向键、PageUp/PageDown、Home 和 End 可以访问整条审阅队列；
接受或拒绝一条修订后，焦点会续接到下一条的同类操作。真实 120 条原生 OOXML 修订的
DOCX 流程已经验证挂载上限、首尾访问、120 到 119 的决策变化、焦点续接、占位几何，
以及零控制台和页面错误。字符与 `paragraph-formatting` 段落格式修订现在是两种独立审核类型。段落跟踪会为一次
跨段命令保存一个规范的完整旧属性起点，在后续未决修改中继续保留，并原子处理整组节点。
接受、拒绝和原格式命令分别拥有独立撤销边界。严格与过渡 `w:pPrChange` 导入导出会保留
受支持的旧段落属性，损坏或不支持的记录仍属于结构诊断。浏览器/Yrs 协作会收敛独立的
不可变决定类型，并禁止 `suggest` 参与者修改段落修订元数据。两套聚焦 A3S Test 使用公开
Playground 验证两条拒绝路径，同时采集截图、可访问性和空控制台/页面错误证据。
批注审阅超过 48 条后最多挂载 32 张连续卡片，并在窗口外保留
当前批注和含未发送回复的批注；锚点几何通过一次线性扫描收集，连线只为已挂载卡片
绘制，已测量的卡片高度会在离开窗口后复用。方向键、PageUp/PageDown、Home 和 End
可以访问全部批注，键盘跳转会同步文档选区、物理页、批注窗口和焦点；删除批注后，
焦点与选区会续接到相邻的保留批注。真实 120 条原生 OOXML 批注 DOCX 已验证锚点导入、
挂载上限、首尾访问、120 到 119 的删除变化、页面同步，以及零控制台和页面错误。
页面信息也已按增量分页边界派生：尾部编辑会复用稳定物理页面前缀已经解析的首页、默认页
和偶数页页眉页脚、页码、摘要与跳转位置，只重新派生回退边界及其后的页面。真实 120 页
DOCX 流程已经验证编辑最后一页时复用 118 页、仅派生末尾 2 页，同时保持页面导航、焦点、
控制台和页面错误稳定。

## 核心功能验收

| 编辑器 | 先做深的能力 | 必要证据 |
| --- | --- | --- |
| Document | 输入、格式、分页、表格、图片、批注、修订、DOCX 往返 | 单元测试、真实 DOCX 对照、逐页视觉回归、键盘 E2E |
| Markdown | 源码与可视化同步、撤销重做、扩展序列化、阅读排版 | Markdown 往返、选区与历史测试、桌面分栏与手机整屏切换 E2E |
| Spreadsheet | 单元格编辑、公式、原生 Table/ListObject、工作表、快捷键、XLSX 往返 | 计算夹具、结构与协作测试、键盘 E2E、原生工作簿对照 |
| Presentation | 场景图、对象编辑、母版版式、放映、PPTX 往返 | 几何单元测试、幻灯片截图、放映 E2E |
| PDF | 页面渲染、导航、搜索、表单、批注、保存 | PDFium 页面证据、长文档导航 E2E、保存后校验 |

第二十三个 Spreadsheet 纵向切片在第二十二个原生 Table/ListObject 切片之上，补齐
开始与字体组的高频 传统 Office 字号和框线键盘路径。可见的增大/减小字号按钮共享
`Cmd/Ctrl+Shift+.`、`Cmd/Ctrl+]`、`Cmd/Ctrl+Shift+,` 与 `Cmd/Ctrl+[`；混合选择会
逐个单元格沿 9 至 72 点阶梯步进，相同结果压缩为原生矩形，并通过一次 Fortune 批处理和
一条撤销记录提交。`Cmd/Ctrl+Shift+&` 写入黑色细实线外侧框线，
`Cmd/Ctrl+Shift+_` 清除选区框线。一次手势最多处理 10,000 个单元格，宿主输入框、公式栏、
单元格文字编辑与模态控件保留原生键盘行为。聚焦 Rstest、桌面/紧凑 Playwright 与本地
A3S Test 1.0.0 ACL 共同保护该切片，GitHub Actions 与 Pages 不安装也不调用 A3S Test。

当前第二十四个 Spreadsheet 纵向切片补齐原生下划线保真度。开始与字体组提供无、单、双、
单会计用和双会计用下划线的 传统 Office 风格拆分控件，设置单元格格式使用同一组类型化选项，并
保留未触碰的混合选择。`Cmd/Ctrl+U` 会关闭任意已启用变体，并从关闭状态启用单下划线；
一次操作只发布一次受控更新和一条撤销记录，随后恢复网格焦点。Fortune `un` 0 至 4 是
唯一浏览器状态，原生 XLSX 字体会准确往返 OOXML `u` 值，SheetJS 回退导入则归一布尔、
数字和命名变体。聚焦 Rstest、桌面/紧凑 Playwright 与本地 A3S Test 1.0.0 ACL 共同保护
该切片，控制台与页面错误证据为空；GitHub Actions 与 Pages 不安装也不调用 A3S Test。

当前第二十五个 Spreadsheet 纵向切片补齐 传统 Office 常用文字方向与行列显隐。开始与对齐组通过
一个支持键盘的单选菜单提供横排、两种 45 度倾斜、竖排、向上旋转和向下旋转。数值角度
写入 Fortune `rt`，逐字堆叠写入 `tr='3'`；XLSX 导入导出准确映射 OOXML 0 至 180 与
255，包括以大于 90 的值表示负角度。一次文字方向操作最多处理 10,000 个单元格，并保持
一次原生批处理、一次受控更新和一条撤销记录。行和列菜单新增隐藏与取消隐藏，网格内的
`Cmd/Ctrl+9`、`Cmd/Ctrl+0`、`Cmd/Ctrl+Shift+9` 与 `Cmd/Ctrl+Shift+0` 走同一组类型化
命令；预检会在分配索引前拒绝超过 10,000 行或 1,000 列的请求。宿主输入框、公式栏、
单元格文字编辑、弹出菜单、对话框、只读视图和重复按键保留原生行为。聚焦 Rstest 与 XLSX、
桌面/紧凑 Playwright Canvas 像素证据和本地 A3S Test 1.0.0 语义回归共同保护该切片；
GitHub Actions 与 Pages 不安装也不调用 A3S Test。

当前第二十六个 Spreadsheet 纵向切片补齐常用直接颜色的“未设置”状态与 传统 Office 字体强调
别名。“自动颜色”删除 Fortune `fc`，“无填充”删除 `bg`；`Ctrl+2`、`Ctrl+3` 与
`Ctrl+4` 通过共享命令目录、类型化命令路径、单步撤销和最终网格焦点分别接入加粗、斜体与
下划线。导入的直接字体、实心填充和边框颜色会保留经过校验的 theme、indexed、automatic、
调色板、渲染 RGB 与 tint 来源，并在无关编辑与 Yjs 传输中存续。只有渲染值与无冲突调色板
槽位仍一致时，XLSX 重建才写回语义引用；已修改或冲突的颜色会安全退化为显式 RGB。聚焦
Rstest、真实导入/编辑/导出/重开夹具、桌面/紧凑 Playwright 与本地 A3S Test 1.0.0
语义回归共同保护该切片。GitHub Actions 与 Pages 不安装也不调用 A3S Test。

当前第二十七个 Spreadsheet 纵向切片独立保留 OOXML 斜下与斜上单元格框线方向。功能区、
设置单元格格式、选择性粘贴、内置样式、Yjs 传输、插入行、XLSX 导出与重新打开都保留准确
方向；只对可见单元格运行的 Canvas 钩子绘制规范导入元数据，不会把稀疏工作表变密。每次
操作最多处理 4,096 个单元格，只做一次索引读取、一次原生批处理、一次受控更新和一条撤销记录。

当前第二十八个 Spreadsheet 纵向切片通过开始与数字组加入静态本地日期 `Ctrl+;` 和分钟精度
本地时间 `Ctrl+Shift+;` 输入。每项命令只修改活动单元格，保留无关样式，在一次批处理中写入
标量与原生数字格式，并创建一条撤销记录。只读、非活动、受保护、合并、数据透视表和非法目标
会在修改前失败。

当前第二十九个 Spreadsheet 纵向切片加入准确的从上方复制语义。`Ctrl+'` 原样复制源公式，
不会平移相对引用；源单元格没有公式时复制标量。`Ctrl+Shift+'` 只复制计算或显示值，并清除
目标公式。一次原生写入保留全部目标样式，只产生一次受控更新和一条撤销记录，成功后同步公式栏。
公式复制会拒绝外部、非法、数组、动态数组、数据表和溢出来源；两项命令都应用目标保护、合并、
数据透视表、边界、活动工作表和可编辑性预检。聚焦 Rstest、桌面/紧凑 Playwright 与仅本地
A3S Test 1.0.0 回归共同验证公式原样复制、缓存值、样式保留、修订次数、焦点、可访问性和空浏览器
诊断，不会把 A3S Test 加入 GitHub Actions 或 Pages。

第三十个 Spreadsheet 纵向切片补齐常用字体对话框键盘入口。
`Cmd/Ctrl+Shift+F` 与 `Cmd/Ctrl+Shift+P` 复用既有类型化“设置单元格格式”命令和捕获选区，
打开字体页后分别聚焦字体或字号下拉框。命令目录继续统一提供编辑器按键与
`aria-keyshortcuts`；非法路由会安全失败，宿主输入、公式栏、单元格编辑和模态控件不被捕获，
Escape 精确返回原网格节点。字体预览保留真实文字颜色，并按相对亮度选择深色或浅色中性画布，
保证浅色字体仍清晰可见。聚焦 Rstest、桌面/紧凑 Playwright 与仅本地 A3S Test 1.0.0 回归
覆盖路由、焦点、对比度、可访问性和空浏览器诊断，Actions 配置保持不变。

第三十一个 Spreadsheet 纵向切片保留共享字符串与内联字符串中的原生 XLSX 单元格富文本，
覆盖导入、整单元格格式修改、导出和重新打开。Fortune 既有 `ct.s` 片段会保留字体、字号、
颜色、粗体、斜体、删除线、四种下划线与首尾空白。仍匹配的主题、索引、自动和色调身份继续按
语义保留，修改后的颜色则以 RGB 导出。一次“设置单元格格式”意图会不可变地更新所有片段，
同时保持内联字符串类型、一次受控修订和一条撤销记录。安全上限为每单元格 32,767 个字符、
512 个片段，以及每次导入 10,000 个富文本单元格和 100,000 个物化片段。聚焦 Rstest、
导入/导出/重开夹具、桌面/紧凑 Playwright 与仅本地 A3S Test 1.0.0 回归共同验证保真度、
焦点、可访问性和空诊断。在该切片中，插入光标后的局部片段创作仍是明确的后续工作。

第三十二个 Spreadsheet 纵向切片补齐常用的局部片段格式能力。在活动单元格编辑器或公式栏中
选中非空文字后，字体、字号、颜色、粗体、斜体、删除线与下划线会先进入同一个有边界的片段
模型，再决定是否回退到整单元格命令。普通字符串只在合法命令成功后转换为原生内联字符串；
已有片段会拆分并合并相邻同样式片段，不会修改未选中文字或仍匹配的语义颜色来源。直接点击
功能区后，只要编辑器仍活动，就会恢复所选文字。非法坐标、非法格式值、公式单元格、拆开
UTF-16 代理对的选择，以及超过 32,767 个字符或 512 个片段的结果都会安全失败。支持字体属性
之外的富文本插入与编辑仍属于后续工作。

第三十三个 Spreadsheet 纵向切片补齐公式栏与 F2 单元格编辑器中的原生富文本直接插入和删除。
一个纯粹且有边界的协调模型会从上一份受控文字推导单段连续替换，让插入字符继承被替换片段或
紧邻的前一个片段，并保留未受影响片段的边界、字体样式，以及主题、索引、自动或色调颜色身份。
经过认证的增量单元格操作只投影精确坐标；没有单元格操作的非结构回调，仅在文字完全不变时才
能恢复源片段；结构批次绝不按旧坐标推断。公式栏与 F2 每次提交只发布一次受控修订和一条撤销
记录，文字未变化的聚焦回调不会发布修订。UTF-16 合法性、32,767 字符和 512 片段上限继续安全
失败。带格式粘贴与同次提交中的多处不连续编辑仍是后续工作。

第三十四个 Spreadsheet 纵向切片补齐公式栏与 F2 编辑器中的常用带格式富文本粘贴。粘贴事件会
为精确工作表对象、单元格坐标、受控源文字、UTF-16 选择范围、剪贴板普通文字和净化字体片段建立
一次性且有边界的授权。增量与兼容投影只有在经过认证的单元格操作提交完全符合预测的替换结果时
才能消费该授权。未修改源片段继续保留边界，以及主题、索引、自动或色调颜色身份；粘贴的字体、
字号、显式 RGB、粗体、斜体、删除线与下划线只作用于插入范围。符合条件的普通和空单元格会转换
为原生内联字符串。HTML 在解析后立即丢弃并限制为 256,000 个字符，单元格文字和结果片段继续
遵守 32,767/512 上限。文字不匹配、非法输入、结构操作和无效 UTF-16 会安全回退到继承样式或
普通文字，不会授权剪贴板样式。一次提交仍只产生一次受控修订和一条撤销记录。聚焦 Rstest、
注册/回退投影测试、桌面/紧凑真实剪贴板 Playwright，以及四个仅本地 A3S Test 1.0.0 场景共同
覆盖该路径并保持空诊断。同次提交中的多处不连续编辑与非字体内联对象仍是后续工作。

## 统一交互质量

所有编辑器共用的设计系统必须覆盖菜单、弹窗、颜色选择器、输入控件、滚动条、焦点环、
右键菜单和响应式布局。每个命令都要满足鼠标、键盘和可访问名称的基本要求；手机界面
不能用遮挡正文的悬浮控件代替合理布局。

办公侧边栏现在分别保存桌面持久栏和手机临时抽屉的展开状态。窗口跨入手机断点时，
桌面侧栏会在同一次渲染中退出，不会短暂变成遮挡工作区的模态抽屉，也不会抢走搜索框
等当前焦点；恢复桌面宽度后仍沿用用户原有的桌面折叠偏好。

共享 Office 下拉列表在桌面端继续保持紧凑密度，手机端则改为 44 像素选项行和更高的
视口内滚动区域。Word 字体确定性流程会用 End 访问完整分组列表、应用末项后把焦点还给
正文，并验证重新打开后按 Escape 会把焦点精确归还字体下拉框。

Markdown 桌面端默认保留可调整的左侧源码和右侧预览，预览直接使用完整阅读界面，不再
嵌套卡片。手机端改为“源码 / 预览”整屏切换，避免把两个窗格压缩成不可用的上下半屏；
确定性流程同时验证受控内容同步、44 px 触控操作和最终预览状态。

手机端 Spreadsheet 查找栏现已限制在视口内，输入框及上一个、下一个、关闭操作均至少
为 40 px。确定性流程会验证搜索结果精确定位到目标单元格，并在 Escape 关闭后把焦点
归还表格。

共享右键菜单在桌面端继续跟随鼠标或键盘选区定位；宽度低于 640 px 时改为贴合安全区的
底部操作面板。每项操作至少 44 px，高内容量菜单在面板内部滚动，Escape 仍把焦点精确
归还编辑目标。Spreadsheet 的确定性流程同时保存手机布局截图、可访问结构、控制台和
页面错误证据。

Spreadsheet 工作簿任务窗格在桌面端保持为有界侧栏，在手机端则成为焦点受控的模态
对话框。打开后功能区、表格画布和工作表栏不可交互，Tab 与 Shift+Tab 不会离开窗格；
Escape 会先取消未保存草稿，再关闭窗格并把焦点精确归还原功能区按钮。确定性浏览器
流程覆盖模态语义、焦点顺序、背景隔离、截图、可访问结构、控制台和页面错误。

Presentation 图表检查器在桌面端保持为有界侧栏；响应式布局一旦让它覆盖画布，就切换
为焦点受控的模态对话框。打开后功能区、幻灯片工作区和状态栏不可交互，关闭按钮获得
初始焦点，Tab 与 Shift+Tab 始终留在窗格内。未保存字段会先消费第一次 Escape，第二次
才关闭窗格并把焦点归还所选图表。确定性手机流程已覆盖模态语义、双向焦点循环、背景
隔离、草稿取消、截图、可访问结构，以及零控制台和页面错误。

Presentation 批注审阅在桌面端保留为停靠条，在手机端则覆盖编辑器形成完整的模态审阅
界面。手机界面使用可读的批注字号和 44 px 主要操作，打开后功能区、幻灯片工作区和
状态栏不可交互，Tab 与 Shift+Tab 始终留在审阅界面；未提交批注会先消费第一次 Escape，
再次按下才关闭。关闭后焦点会精确归还“新建批注”“查看批注”或幻灯片批注标记。确定性
手机流程覆盖两类功能区触发路径、模态语义、背景隔离、双向焦点循环、截图、可访问结构、
控制台和页面错误。

## 文件往返原则

- 未修改内容应尽量保持原文件语义与包结构。
- 不支持字段必须明确记录，不能无提示丢弃。
- 导入、编辑、导出后重新读取，并比较结构化结果。
- 写入失败不能覆盖源文件。
- 浏览器与本地 CLI 对同一公共语义使用兼容的类型定义。

## 测试分层

```text
类型与纯函数单元测试
  → 编辑器组件交互测试
  → 导入 / 导出往返测试
  → A3S Test 确定性 E2E
  → 固定环境视觉回归
  → 传统 Office / Word 等参考渲染的逐页差异报告
```

Agentic 测试用于探索问题和形成稳定路径；确认后的流程应收敛为确定性测试。任何浏览器
会话都必须有范围地创建和清理，不能通过进程名关闭用户正在使用的 Chrome。

## 发布门槛

版本发布前至少需要通过类型检查、单元测试、组件构建、Playground 构建、关键 E2E、
视觉合同和包内容校验。文档中的属性、限制与发布版本必须对应，`latest` 可以描述尚未
发布的主分支能力，历史版本页面则保持冻结。

完整任务清单和每项实现状态见
[English 完整路线图](/en/editor-quality-roadmap.md)。
